--- a/clusters/cluster01/apps/argo-system/argo-cd/kustomization.yaml
+++ b/clusters/cluster01/apps/argo-system/argo-cd/kustomization.yaml
@@ -3,18 +3,5 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: argo-system
 resources:
-  - ./config
-  - ./setenv-cmp-plugin.yaml
+  - ../../../../components/argo-system/argo-cd
   - ./external-secret.yaml
-helmCharts:
-  - name: argo-cd
-    releaseName: argo-cd
-    repo: https://argoproj.github.io/argo-helm
-    version: 8.3.5
-    valuesFile: values.yaml
-configMapGenerator:
-  - files:
-      - plugin.yaml=setenv-cmp-plugin.yaml
-    name: setenv-cmp-plugin
-generatorOptions:
-  disableNameSuffixHash: true
