--- a/clusters/cluster01/apps/argo-system/root-application/kustomization.yaml
+++ b/clusters/cluster01/apps/argo-system/root-application/kustomization.yaml
@@ -2,4 +2,16 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./root-application.yaml
+  - ../../../../components/argo-system/root-application
+
+patches:
+  - patch: |
+      - op: replace
+        path: /spec/source/repoURL
+        value: https://github.com/Vikaspogu/home-ops.git
+      - op: replace
+        path: /spec/source/path
+        value: clusters/cluster01/apps
+    target:
+      kind: Application
+      name: root-applications
