--- a/clusters/cluster01/apps/kube-system/cilium/kustomization.yaml
+++ b/clusters/cluster01/apps/kube-system/cilium/kustomization.yaml
@@ -2,9 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - ./config
-  - ./gateway
-  - https://github.com/kubernetes-sigs/gateway-api/config/crd/experimental?timeout=120&ref=v1.3.0
+  - ../../../../../components/kube-system/cilium
 
 helmCharts:
   - name: cilium
