--- a/components/external-secrets/onepassword-connect/values.yaml
+++ b/components/external-secrets/onepassword-connect/values.yaml
@@ -80,7 +80,7 @@ spec:
           gethomepage.dev/group: Ingress
           gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/1password.png
         hosts:
-          - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
+          - host: &host "{{ .Release.Name }}.${CLUSTER_DOMAIN}"
             paths:
               - path: /
                 service:
