--- a/components/external-secrets/external-secrets-chart/kustomization.yaml
+++ b/components/external-secrets/external-secrets-chart/kustomization.yaml
@@ -2,7 +2,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: default
-
+resources:
+  - namespace.yaml
 helmCharts:
   - name: external-secrets
     releaseName: external-secrets
