--- a/components/external-secrets/onepassword-connect/kustomization.yaml
+++ b/components/external-secrets/onepassword-connect/kustomization.yaml
@@ -1,14 +1,13 @@
 ---
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
-namespace: default
 generators:
   - ./secret.sops.yaml
 
 helmCharts:
   - name: app-template
     releaseName: onepassword-connect
-    namespace: default
+    namespace: external-secrets
     repo: oci://ghcr.io/bjw-s-labs/helm
     version: "4.2.0"
     valuesFile: values.yaml
