--- a/clusters/cluster01/apps/kube-system/cilium/kustomization.yaml
+++ b/clusters/cluster01/apps/kube-system/cilium/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
 helmCharts:
   - name: cilium
     releaseName: cilium
+    namespace: kube-system
     repo: https://helm.cilium.io
     version: 1.18.1
     valuesFile: values.yaml
