--- a/components/argo-system/argo-cd/values.yaml
+++ b/components/argo-system/argo-cd/values.yaml
@@ -11,7 +11,7 @@ configs:
     statusbadge.enabled: true
     kustomize.buildOptions: "--enable-alpha-plugins --enable-exec  --load-restrictor LoadRestrictionsNone"
     # Custom health check
-    resource.customizations.health.certmanager.k8s.io-Certificate: |
+    resource.customizations.health.certmanager.k8s.io_Certificate: |
       hs = {}
       if obj.status ~= nil then
         if obj.status.conditions ~= nil then
@@ -32,7 +32,7 @@ configs:
       hs.status = "Progressing"
       hs.message = "Waiting for certificate"
       return hs
-    resource.customizations.health.certmanager.external-secrets.io-ExternalSecret: |
+    resource.customizations.health.certmanager.external-secrets.io_ExternalSecret: |
       hs = {}
       if obj.status ~= nil then
         if obj.status.conditions ~= nil then
@@ -53,7 +53,7 @@ configs:
       hs.status = "Progressing"
       hs.message = "Waiting for ExternalSecret"
       return hs
-    resource.customizations.health.external-secrets.io-ClusterSecretStore: |
+    resource.customizations.health.external-secrets.io_ClusterSecretStore: |
       hs = {}
       if obj.status ~= nil then
         if obj.status.conditions ~= nil then
@@ -74,7 +74,7 @@ configs:
       hs.status = "Progressing"
       hs.message = "Waiting for ClusterSecretStore"
       return hs
-    resource.customizations.health.argoproj.io-Application: |
+    resource.customizations.health.argoproj.io_Application: |
         hs = {}
         hs.status = "Progressing"
         hs.message = ""
@@ -85,7 +85,7 @@ configs:
           end
         end
         return hs
-    resource.customizations.health.certmanager.certmanager.io-Certificate: |
+    resource.customizations.health.certmanager.certmanager.io_Certificate: |
       hs = {}
       if obj.status ~= nil then
         if obj.status.conditions ~= nil then
@@ -112,7 +112,7 @@ configs:
       hs.status = "Progressing"
       hs.message = "Waiting for certificate"
       return hs
-    resource.customizations.health.certmanager.certmanager.io-ClusterIssuer: |
+    resource.customizations.health.certmanager.certmanager.io_ClusterIssuer: |
       hs = {}
       if obj.status ~= nil then
         if obj.status.conditions ~= nil then
