--- a/components/kube-system/coredns/kustomization.yaml
+++ b/components/kube-system/coredns/kustomization.yaml
@@ -3,17 +3,10 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
-configMapGenerator:
-  - name: coredns-helm-values
-    files:
-      - values.yaml=./helm-values.yaml
-configurations:
-  - kustomizeconfig.yaml
-
-
 helmCharts:
   - name: coredns
     releaseName: coredns
+    namespace: kube-system
     repo: oci://ghcr.io/coredns/charts
     version: 1.43.3
     valuesFile: values.yaml
