--- a/clusters/cluster01/apps/values.yaml
+++ b/clusters/cluster01/apps/values.yaml
@@ -45,6 +45,7 @@ applications:
   external-secrets-chart:
     annotations:
       argocd.argoproj.io/sync-wave: "0"
+      argocd.argoproj.io/sync-options: ServerSideApply=true
     destination:
       namespace: external-secrets
     source:
