--- a/components/argo-system/argo-cd/values.yaml
+++ b/components/argo-system/argo-cd/values.yaml
@@ -79,6 +79,11 @@ configs:
       hs.status = "Progressing"
       hs.message = ""
       if obj.status ~= nil then
+        if obj.status.conditions == "Unknown" then
+          hs.status = "Degraded"
+          hs.message = "Unknown Application"
+          return hs
+        end
         if obj.status.health ~= nil then
           hs.status = obj.status.health.status
           if obj.status.health.message ~= nil then
