--- a/components/argo-system/argo-cd/setenv-cmp-plugin.yaml
+++ b/components/argo-system/argo-cd/setenv-cmp-plugin.yaml
@@ -11,7 +11,7 @@ spec:
     command:
       - sh
       - "-c"
-      - "set -o pipefail && kustomize build --load-restrictor LoadRestrictionsNone --enable-helm --enable-alpha-plugins . | envsub"
+      - "set -o pipefail && kustomize build --load-restrictor LoadRestrictionsNone --enable-exec --enable-alpha-plugins . | envsub"
   discover:
     find:
       command: [sh, -c, "find . -maxdepth 1 -name kustomization.yaml"]
