--- a/components/argo-system/argo-cd/values.yaml
+++ b/components/argo-system/argo-cd/values.yaml
@@ -79,10 +79,14 @@ configs:
       hs.status = "Progressing"
       hs.message = ""
       if obj.status ~= nil then
-        if obj.status.conditions == "Unknown" then
-          hs.status = "Degraded"
-          hs.message = "Unknown Application"
-          return hs
+        if obj.status.conditions ~= nil then
+          for i, condition in ipairs(obj.status.conditions) do
+            if condition.type == "ComparisonError" then
+              hs.status = "Degraded"
+              hs.message = condition.message
+              return hs
+            end
+          end
         end
         if obj.status.health ~= nil then
           hs.status = obj.status.health.status
