(fix): update path

--- a/components/external-secrets/onepassword-connect/secret-generator.yaml
+++ b/components/external-secrets/onepassword-connect/secret-generator.yaml
@@ -6,6 +6,6 @@ metadata:
   annotations:
     config.kubernetes.io/function: |
         exec:
-          path: ksops
+          path: /etc/kustomize/plugin/viaduct.ai/v1/ksops/ksops
 files:
   - ./secrets.sops.yaml
