--- a/components/argo-system/argo-cd/values.yaml
+++ b/components/argo-system/argo-cd/values.yaml
@@ -156,7 +156,7 @@ repoServer:
       command: [/var/run/argocd/argocd-cmp-server]
       env:
         - name: XDG_CONFIG_HOME
-          value: /etc/kustomize/plugin/viaduct.ai/v1/ksops
+          value: /.config
         - name: SOPS_AGE_KEY_FILE
           value: /.config/sops/age/keys.txt
         - name: KUSTOMIZE_PLUGIN_HOME
@@ -196,7 +196,7 @@ repoServer:
         - get
   env:
     - name: XDG_CONFIG_HOME
-      value: /etc/kustomize/plugin/viaduct.ai/v1/ksops
+      value: /.config
     - name: SOPS_AGE_KEY_FILE
       value: /.config/sops/age/keys.txt
     - name: KUSTOMIZE_PLUGIN_HOME
