--- a/helm/charts/argocd-app-of-app/templates/applications.yaml
+++ b/helm/charts/argocd-app-of-app/templates/applications.yaml
@@ -5,6 +5,9 @@ apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
   name: {{ $key }}
+  {{- if (($val.destination).namespace) }}
+  namespace: {{ (($val.destination).namespace) | default $.Values.default.app.destination.namespace | required (printf "No destination.namespace specified for %s" $key ) }}
+  {{- end }}
 {{- if or $val.labels $.Values.default.app.labels }}
 {{- $appLabels := $val.labels }}
 {{- $defaultLabels := $.Values.default.app.labels }}
