(fix): add namespace to helm release

--- a/components/argo-system/argo-cd/kustomization.yaml
+++ b/components/argo-system/argo-cd/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
 helmCharts:
   - name: argo-cd
     releaseName: argo-cd
+    namespace: argo-system
     repo: https://argoproj.github.io/argo-helm
     version: 8.3.5
     valuesFile: values.yaml
