--- a/components/cert-manager/cert-manager/issuers/cluster-issuer.yaml
+++ b/components/cert-manager/cert-manager/issuers/cluster-issuer.yaml
@@ -13,7 +13,7 @@ spec:
           cloudflare:
             apiTokenSecretRef:
               name: cert-manager-secret
-              key: api-token
+              key: api-key
         selector:
           dnsZones:
             - ${CLUSTER_DOMAIN}
