--- a/components/kube-system/cilium/gateway/internal.yaml
+++ b/components/kube-system/cilium/gateway/internal.yaml
@@ -4,7 +4,7 @@ kind: Gateway
 metadata:
   name: internal
   annotations:
-    external-dns.alpha.kubernetes.io/target: internal.v3socp.boo
+    external-dns.alpha.kubernetes.io/target: internal.${CLUSTER_DOMAIN}
 spec:
   gatewayClassName: cilium
   addresses:
@@ -12,23 +12,23 @@ spec:
       value: ${INTERNAL_IP_ADDRESS}
   infrastructure:
     annotations:
-      external-dns.alpha.kubernetes.io/hostname: internal.v3socp.boo
+      external-dns.alpha.kubernetes.io/hostname: internal.${CLUSTER_DOMAIN}
   listeners:
     - name: http
       protocol: HTTP
       port: 80
-      hostname: "*.v3socp.boo"
+      hostname: "*.${CLUSTER_DOMAIN}"
       allowedRoutes:
         namespaces:
           from: Same
     - name: https
       protocol: HTTPS
       port: 443
-      hostname: "*.v3socp.boo"
+      hostname: "*.${CLUSTER_DOMAIN}"
       allowedRoutes:
         namespaces:
           from: All
       tls:
         certificateRefs:
           - kind: Secret
-            name: v3socp-boo-production-tls
+            name: ${CLUSTER_DOMAIN}-production-tls
