--- a/components/argo-system/argo-cd/config/http-route.yaml
+++ b/components/argo-system/argo-cd/config/http-route.yaml
@@ -4,8 +4,9 @@ metadata:
   name: argo
 spec:
   parentRefs:
-    - name: internal
-      namespace: kube-system
+    - name: envoy-external
+      namespace: network
+      sectionName: https
   hostnames: ["argo.${CLUSTER_DOMAIN}"]
   rules:
     - backendRefs:
