--- a/.taskfiles/bootstrap/Taskfile.yaml
+++ b/.taskfiles/bootstrap/Taskfile.yaml
@@ -21,8 +21,12 @@ tasks:
 
   apps:
     desc: Bootstrap apps into the Talos cluster
-    cmd: bash {{.SCRIPTS_DIR}}/bootstrap-apps.sh
+    vars:
+      CLUSTER_NAME: '{{.CLUSTER_NAME}}'
+    cmd: bash {{.SCRIPTS_DIR}}/bootstrap-apps.sh {{.CLUSTER_NAME}}
     preconditions:
+      - sh: '[ -n "{{.CLUSTER_NAME}}" ]'
+        msg: 'CLUSTER_NAME is required. Usage: task bootstrap:apps CLUSTER_NAME=<cluster_name>'
       - msg: Unsupported bash version, run `brew install bash` to upgrade
         sh: '{{if eq OS "darwin"}}test -f /opt/homebrew/bin/bash || test -f /usr/local/bin/bash{{end}}'
       - test -f {{.KUBECONFIG}}
