--- a/components/kube-system/reloader/kustomization.yaml
+++ b/components/kube-system/reloader/kustomization.yaml
@@ -4,7 +4,7 @@ kind: Kustomization
 helmCharts:
   - name: reloader
     releaseName: reloader
-    namespace: reloader
+    namespace: kube-system
     repo: https://stakater.github.io/stakater-charts
     version: "2.2.3"
     valuesInline:
