--- a/components/kube-system/traefik/helmchart.yaml
+++ b/components/kube-system/traefik/helmchart.yaml
@@ -23,6 +23,8 @@ spec:
         https:
           port: 8443
           protocol: HTTPS
+          namespacePolicy:
+            from: All
           certificateRefs:
           - name: ${CLUSTER_DOMAIN}-production-tls
             namespace: kube-system
