--- a/components/kube-system/traefik/helmchart.yaml
+++ b/components/kube-system/traefik/helmchart.yaml
@@ -23,8 +23,7 @@ spec:
         https:
           port: 8443
           protocol: HTTPS
-          namespacePolicy:
-            from: All
+          namespacePolicy: All
           certificateRefs:
           - name: ${CLUSTER_DOMAIN}-production-tls
             namespace: kube-system
