(fix): secret name

--- a/clusters/omv/apps/argo-system/argo-cd/external-secret.yaml
+++ b/clusters/omv/apps/argo-system/argo-cd/external-secret.yaml
@@ -15,7 +15,7 @@ spec:
         CLUSTER_DOMAIN: "{{.CLUSTER_DOMAIN}}"
         EXTERNAL_IP_ADDRESS: "{{.EXTERNAL_IP_ADDRESS}}"
         INTERNAL_IP_ADDRESS: "{{.INTERNAL_IP_ADDRESS}}"
-        GATEWAY_NAME: "{{.GATEWAY_NAME}}"
+        GATEWAY_NAME: "{{.GATEWAY}}"
         GATEWAY_NAMESPACE: "{{.GATEWAY_NAMESPACE}}"
   dataFrom:
     - extract:
