(fix): test with helmchart

--- a/components/cattle-system/rancher/kustomization.yaml
+++ b/components/cattle-system/rancher/kustomization.yaml
@@ -3,13 +3,5 @@ kind: Kustomization
 namespace: cattle-system
 resources:
   - ./namespace.yaml
-  # - ./external-secret.yaml
+  - ./helm-chart.yaml
   - ./http-route.yaml
-
-helmCharts:
-  - name: rancher
-    releaseName: rancher
-    namespace: cattle-system
-    repo: https://releases.rancher.com/server-charts/stable
-    version: 2.12.1
-    valuesFile: values.yaml
