--- a/clusters/cluster01/apps/argo-system/argo-cd/external-secret.yaml
+++ b/clusters/cluster01/apps/argo-system/argo-cd/external-secret.yaml
@@ -12,11 +12,11 @@ spec:
     template:
       type: Opaque
       data:
-        CLUSTER_DOMAIN: {{.CLUSTER_DOMAIN}}
-        EXTERNAL_IP_ADDRESS: {{.EXTERNAL_IP_ADDRESS}}
-        INTERNAL_IP_ADDRESS: {{.INTERNAL_IP_ADDRESS}}
-        GATEWAY_NAME: {{.GATEWAY_NAME}}
-        GATEWAY_NAMESPACE: {{.GATEWAY_NAMESPACE}}
+        CLUSTER_DOMAIN: "{{.CLUSTER_DOMAIN}}"
+        EXTERNAL_IP_ADDRESS: "{{.EXTERNAL_IP_ADDRESS}}"
+        INTERNAL_IP_ADDRESS: "{{.INTERNAL_IP_ADDRESS}}"
+        GATEWAY_NAME: "{{.GATEWAY_NAME}}"
+        GATEWAY_NAMESPACE: "{{.GATEWAY_NAMESPACE}}"
   dataFrom:
     - extract:
         key: cluster01
