--- a/components/volsync/volsync-replication/pvc.yaml
+++ b/components/volsync/volsync-replication/pvc.yaml
@@ -5,12 +5,12 @@ metadata:
   name: ${APP}
 spec:
   accessModes:
-    - ${VOLSYNC_ACCESSMODES:=ReadWriteOnce}
+    - ReadWriteOnce
   dataSourceRef:
     kind: ReplicationDestination
     apiGroup: volsync.backube
     name: ${APP}-dst
   resources:
     requests:
-      storage: ${VOLSYNC_CAPACITY:=5Gi}
-  storageClassName: ${VOLSYNC_STORAGECLASS:=ceph-block}
+      storage: 5Gi
+  storageClassName: ceph-block
