--- a/components/argo-system/argo-cd/config/http-route.yaml
+++ b/components/argo-system/argo-cd/config/http-route.yaml
@@ -2,6 +2,11 @@ apiVersion: gateway.networking.k8s.io/v1
 kind: HTTPRoute
 metadata:
   name: argo
+  annotations:
+    gethomepage.dev/href: "https://argo.${CLUSTER_DOMAIN}"
+    gethomepage.dev/enabled: "true"
+    gethomepage.dev/group: Ingress
+    gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/argo-cd.png
 spec:
   parentRefs:
     - name: ${GATEWAY_NAME}
