--- a/components/system-upgrade/k3s/plan.yaml
+++ b/components/system-upgrade/k3s/plan.yaml
@@ -7,7 +7,7 @@ spec:
   version: "v1.33.4+k3s1"
   upgrade:
     image: rancher/k3s-upgrade
-  serviceAccountName: system-upgrade
+  serviceAccountName: system-upgrade-controller
   concurrency: 1
   cordon: true
   nodeSelector:
@@ -37,14 +37,12 @@ metadata:
   name: workers
 spec:
   version: "v1.33.4+k3s1"
-  serviceAccountName: system-upgrade
+  serviceAccountName: system-upgrade-controller
   concurrency: 1
   nodeSelector:
     matchExpressions:
       - key: node-role.kubernetes.io/control-plane
         operator: DoesNotExist
-  tolerations:
-    - { key: "k3s-arm", operator: "Exists" }
   prepare:
     image: rancher/k3s-upgrade
     args: ["prepare", "controllers"]
