--- a/clusters/omv/apps/values.yaml
+++ b/clusters/omv/apps/values.yaml
@@ -149,6 +149,21 @@ applications:
     source:
       path: components/kube-system/reloader
 
+  kopia:
+    annotations:
+      argocd.argoproj.io/sync-wave: "25"
+    destination:
+      namespace: volsync-system
+    source:
+      path: components/volsync-system/kopia
+
+  volsync:
+    annotations:
+      argocd.argoproj.io/sync-wave: "25"
+    destination:
+      namespace: volsync-system
+    source:
+      path: components/volsync-system/volsync
 
   system-upgrade-controller:
     annotations:
