--- a/components/downloads/qbittorrent/values.yaml
+++ b/components/downloads/qbittorrent/values.yaml
@@ -135,7 +135,7 @@ ingress:
       gethomepage.dev/group: Ingress
       gethomepage.dev/icon: qbittorrent.png
     hosts:
-      - host: "qb.${SECRET_DOMAIN}"
+      - host: "qb.${CLUSTER_DOMAIN}"
         paths:
           - path: /
             pathType: Prefix
@@ -144,7 +144,7 @@ ingress:
               port: http
     tls:
       - hosts:
-          - "qb.${SECRET_DOMAIN}"
+          - "qb.${CLUSTER_DOMAIN}"
 
 persistence:
   config:
