--- a/components/observability/kube-prometheus-stack/values.yaml
+++ b/components/observability/kube-prometheus-stack/values.yaml
@@ -2,11 +2,15 @@
 cleanPrometheusOperatorObjectNames: true
 fullnameOverride: prometheus
 alertmanager:
-  ingress:
-    enabled: true
-    ingressClassName: internal
-    hosts: ["alertmanager.${SECRET_DOMAIN}"]
-    pathType: Prefix
+  route:
+    main:
+      enabled: true
+      hostnames:
+        - alertmanager.${CLUSTER_DOMAIN}
+      parentRefs:
+        - name: ${GATEWAY_NAME}
+          namespace: ${GATEWAY_NAMESPACE}
+          sectionName: https
     annotations:
       gethomepage.dev/enabled: "true"
       gethomepage.dev/group: Ingress
@@ -16,7 +20,7 @@ alertmanager:
       name: alertmanager
       global:
         resolveTimeout: 5m
-    externalUrl: https://alertmanager.${SECRET_DOMAIN}
+    externalUrl: https://alertmanager.${CLUSTER_DOMAIN}
     storage:
       volumeClaimTemplate:
         spec:
@@ -24,49 +28,45 @@ alertmanager:
           resources:
             requests:
               storage: 1Gi
-kubeApiServer:
-  serviceMonitor:
-    selector:
-      k8s-app: kube-apiserver
-kubeScheduler:
-  service:
-    selector:
-      k8s-app: kube-scheduler
-kubeControllerManager: &kubeControllerManager
-  service:
-    selector:
-      k8s-app: kube-controller-manager
 kubeEtcd:
-  <<: *kubeControllerManager # etcd runs on control plane nodes
+  service:
+    selector:
+      component: kube-apiserver # etcd runs on control plane nodes
 kubeProxy:
   enabled: false
 prometheus:
-  ingress:
-    enabled: true
-    ingressClassName: internal
-    hosts: ["prometheus.${SECRET_DOMAIN}"]
-    pathType: Prefix
-    annotations:
-      gethomepage.dev/enabled: "true"
-      gethomepage.dev/group: Ingress
-      gethomepage.dev/icon: https://cdn.jsdelivr.net/gh/selfhst/icons/png/prometheus.png
+  route:
+    main:
+      enabled: true
+      hostnames:
+        - prometheus.${CLUSTER_DOMAIN}
+      parentRefs:
+        - name: ${GATEWAY_NAME}
+          namespace: ${GATEWAY_NAMESPACE}
+          sectionName: https
   prometheusSpec:
+    externalUrl: https://prometheus.${CLUSTER_DOMAIN}
+    image:
+      registry: docker.io
+      repository: prompp/prompp
+      tag: 2.53.2-0.4.0
+    securityContext:
+      runAsNonRoot: true
+      runAsUser: 64535
+      runAsGroup: 64535
+      fsGroup: 64535
     podMonitorSelectorNilUsesHelmValues: false
     probeSelectorNilUsesHelmValues: false
     ruleSelectorNilUsesHelmValues: false
     scrapeConfigSelectorNilUsesHelmValues: false
     serviceMonitorSelectorNilUsesHelmValues: false
-    enableAdminAPI: true
-    walCompression: true
-    enableFeatures:
-      - memory-snapshot-on-shutdown
     retention: 5d
     retentionSize: 40GB
     resources:
       requests:
         cpu: 100m
       limits:
-        memory: 4000Mi
+        memory: 2000Mi
     storageSpec:
       volumeClaimTemplate:
         spec:
