--- a/components/observability/loki/values.yaml
+++ b/components/observability/loki/values.yaml
@@ -67,7 +67,7 @@ gateway:
     enabled: true
     ingressClassName: internal
     hosts:
-      - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
+      - host: &host "{{ .Release.Name }}.${CLUSTER_DOMAIN}"
         paths:
           - path: /
             pathType: Prefix
