--- a/components/volsync-system/kopia/values.yaml
+++ b/components/volsync-system/kopia/values.yaml
@@ -19,7 +19,7 @@ controllers:
         env:
           KOPIA_WEB_ENABLED: true
           KOPIA_WEB_PORT: &port 80
-          TZ: "${TIMEZONE}"
+          TZ: "America/New_York"
         envFrom:
           - secretRef:
               name: kopia-secret
@@ -59,7 +59,7 @@ service:
 
 serviceMonitor:
   app:
-    enabled: true
+    enabled: false
     serviceName: app
     endpoints:
       - port: metrics
@@ -68,25 +68,18 @@ serviceMonitor:
         interval: 1m
         scrapeTimeout: 10s
 
-ingress:
+route:
   app:
-    enabled: false
-    className: internal
     annotations:
       gethomepage.dev/enabled: "true"
       gethomepage.dev/group: Ingress
       gethomepage.dev/icon: kopia.png
-    hosts:
-      - host: &host "{{ .Release.Name }}.${SECRET_DOMAIN}"
-        paths:
-          - path: /
-            pathType: Prefix
-            service:
-              identifier: app
-              port: http
-    tls:
-      - hosts:
-          - *host
+    hostnames:
+      - "kopia.${CLUSTER_DOMAIN}"
+    parentRefs:
+      - name: ${GATEWAY_NAME}
+        namespace: ${GATEWAY_NAMESPACE}
+        sectionName: https
 
 persistence:
   config:
