--- a/clusters/omv/apps/values.yaml
+++ b/clusters/omv/apps/values.yaml
@@ -173,6 +173,38 @@ applications:
     source:
       path: components/volsync-system/volsync
 
+  barman-cloud:
+    annotations:
+      argocd.argoproj.io/sync-wave: "25"
+    destination:
+      namespace: default
+    source:
+      path: components/default/barman-cloud
+
+  cloudnative-pg:
+    annotations:
+      argocd.argoproj.io/sync-wave: "25"
+    destination:
+      namespace: default
+    source:
+      path: components/default/cloudnative-pg
+
+  cloudnative-cluster:
+    annotations:
+      argocd.argoproj.io/sync-wave: "30"
+    destination:
+      namespace: default
+    source:
+      path: components/default/cloudnative-cluster
+
+  # rwmarkable:
+  #   annotations:
+  #     argocd.argoproj.io/sync-wave: "35"
+  #   destination:
+  #     namespace: default
+  #   source:
+  #     path: components/default/rwmarkable
+
   system-upgrade-controller:
     annotations:
       argocd.argoproj.io/sync-wave: "45"
