--- a/components/default/cloudnative-cluster/external-secret.yaml
+++ b/components/default/cloudnative-cluster/external-secret.yaml
@@ -3,13 +3,13 @@
 apiVersion: external-secrets.io/v1
 kind: ExternalSecret
 metadata:
-  name: garage
+  name: garage-access-keys
 spec:
   secretStoreRef:
     kind: ClusterSecretStore
     name: onepassword-connect
   target:
-    name: garage
+    name: garage-access-keys
     template:
       engineVersion: v2
       data:
